added cater face and rounded body fruit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Fruit buttons!
         </section>
         <section id="caterpillar">
-            Caterpillar.
+            <img id="cata-face" src="./assets/cataface.png" alt="cartoon caterpillar face">
         </section>
     </main>
     <footer></footer>
