--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <section id="caterpillar">
             <img id="cata-face" src="./assets/cataface.png" alt="cartoon caterpillar face">
         </section>
+        <section id="dance-button">
+            Daaance butttonnnnn.
+        </section>
     </main>
     <footer></footer>
 
